fixed dark mode for tasks

--- a/src/output.css
+++ b/src/output.css
@@ -37,6 +37,7 @@
     --color-slate-200: oklch(92.9% 0.013 255.508);
     --color-slate-300: oklch(86.9% 0.022 252.894);
     --color-slate-400: oklch(70.4% 0.04 256.788);
+    --color-slate-500: oklch(55.4% 0.046 257.417);
     --color-slate-600: oklch(44.6% 0.043 257.281);
     --color-slate-800: oklch(27.9% 0.041 260.031);
     --color-gray-100: oklch(96.7% 0.003 264.542);
@@ -242,11 +243,6 @@
   .right-3 {
     right: calc(var(--spacing) * 3);
   }
-
-  .right-4 {
-    right: calc(var(--spacing) * 4);
-  }
-
   .right-full {
     right: 100%;
   }
@@ -339,9 +335,6 @@
   }
   .mr-5 {
     margin-right: calc(var(--spacing) * 5);
-  }
-  .mr-6 {
-    margin-right: calc(var(--spacing) * 6);
   }
   .mr-16 {
     margin-right: calc(var(--spacing) * 16);
@@ -990,9 +983,9 @@
       background-color: var(--color-red-900);
     }
   }
-  .dark\:bg-slate-800 {
+  .dark\:bg-slate-500 {
     &:where(.dark, .dark *) {
-      background-color: var(--color-slate-800);
+      background-color: var(--color-slate-500);
     }
   }
   .dark\:text-amber-300 {
@@ -1035,28 +1028,9 @@
       color: var(--color-red-300);
     }
   }
-  .dark\:text-slate-300 {
-    &:where(.dark, .dark *) {
-      color: var(--color-slate-300);
-    }
-  }
   .dark\:text-white {
     &:where(.dark, .dark *) {
       color: var(--color-white);
-    }
-  }
-  .dark\:placeholder-gray-400 {
-    &:where(.dark, .dark *) {
-      &::placeholder {
-        color: var(--color-gray-400);
-      }
-    }
-  }
-  .dark\:placeholder-gray-500 {
-    &:where(.dark, .dark *) {
-      &::placeholder {
-        color: var(--color-gray-500);
-      }
     }
   }
   .dark\:placeholder-white {
